syntax = "proto3";

message TestMsg
{
  string str_val = 1;
  int32 int_val = 2;
}

message TestMsg2 {
  string name = 1;
  int32 age = 2;
}

message TestMsg3 {
  string address = 2;
  int32 zipcode = 4;
}